<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_sh_list_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:behavior_hideable="false"
    app:behavior_peekHeight="@dimen/bottom_sheet_height_collapsed"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_sheet_height_collapsed"
        android:orientation="horizontal"
        android:id="@+id/filter_info"
        android:weightSum="10">

        <ImageView
            android:id="@+id/sh_list_arrow_up"
            android:layout_weight="10"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:contentDescription="@null"
            android:scaleType="fitCenter"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightGrey" />

    <com.geoschnitzel.treasurehunt.utils.BottomSheetListView
        android:id="@+id/sh_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:footerDividersEnabled="false"
        android:background="@color/white"
        android:listSelector="#d7dbdd" />
</LinearLayout>