<resources>
    <string name="app_name">TreasureHunt</string>
    <string name="title_activity_shlist">SHListActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_mapview">mapview</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="create_name">Hunt Name</string>
    <string name="create_points">Waypoints</string>
	
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_unlock">Unlock</string>
    <string name="item_hint_timeunlock">Time to unlock</string>
    <string name="hint_item_unlock_button">Unlock</string>
    <string name="hint_item_buy_button">Buy</string>
    <string name="options_button_filter">Filter</string>
    <string name="distance_to_start">Distance to start</string>
    <string name="hunt_length">Hunt Length</string>
    <string name="rating">Rating</string>
    <string name="fragment_tag_hint_view">fragment_hint_view</string>
    <string name="fragment_tag_game_map">fragment_game_map</string>
    <string name="fragment_tag_map">fragment_map</string>
    <string name="fragment_tag_login">fragment_login</string>
    <string name="fragment_tag_shlist">fragment_shlist</string>
    <string name="fragment_tag_create_sh">fragment_create_sh</string>
    <string name="fragment_tag_purchase_sh">fragment_purchase_sh</string>
    <string name="title_sh_create_activity">Create new hunt</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_game">SchnitzelHunt</string>
    <string name="title_activity_end_game">Success!</string>
    <string name="end_game_congratulations">Congratulations!</string>
    <string name="end_game_finish_talk">You finished your SchnitzelHunt!</string>
    <string name="fragment_tag_end_game">fragment_tag_end_game</string>
    <string name="forward">forward</string>
    <string name="abort">abort</string>
    <string name="create_hunt">create</string>
    <string name="go_back">back</string>
    <string name="GameMapFragmentReachedTarget">Reached target</string>
    <string name="not_implemented">not implemented</string>
    <string name="sh_list_item_name">Name</string>
    <string name="sh_list_item_author">Author</string>
    <string name="sh_list_item_length">Length</string>
    <string name="sh_list_item_description">Description</string>
</resources>
