<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/hintItemHeight"
    android:layout_marginBottom="@dimen/hintItemMargin"
    tools:context="com.geoschnitzel.treasurehunt.game.GameHintViewFragment"
    android:id="@+id/fragment_game_hintview"
    android:layout_gravity="bottom|right">

    <android.support.v17.leanback.widget.HorizontalGridView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/hint_container" />

</FrameLayout>